# varavault

./: .gitignore  Cargo.toml  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile.vara  Dockerfile.wasm-build  Dockerfile.wasm-build2  INTEGRATIONS.md  README.md  agent.mjs  analyze.mjs  chat_post.mjs  check_registry.js  check_status.mjs  demo-script.md  deploy.js  deploy.sh  discover.mjs  extract_idl.js  finalize.mjs  find_bug.sh  get_partner_idls.mjs  get_voucher.mjs  integrate.mjs  package-lock.json  package.json  patch_and_upload.sh  patched_upload.sh  register-app.json  register-output.txt  register.mjs  setup.sh  skills.md  social-kit.md  upload_direct.mjs  varavault_program.idl  verify.mjs  vw.ps1  wait_for_vara.sh
.cargo/: config.toml
src/: lib.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/src/: App.jsx  index.css  varavault.idl.js  vault.js
